exports[`(.not).toHaveUseProxyStatus > using axios > .not.toHaveUseProxyStatus > fails when response have status code 305 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUseProxyStatus()</intensity>

Expected status code to not be 305 received:
  <red>305</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 305,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUseProxyStatus > using axios > .toHaveUseProxyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUseProxyStatus()</intensity>

Expected status code to be 305 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveUseProxyStatus > using got > .not.toHaveUseProxyStatus > fails when response have status code 305 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveUseProxyStatus()</intensity>

Expected status code to not be 305 received:
  <red>305</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 305,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveUseProxyStatus > using got > .toHaveUseProxyStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveUseProxyStatus()</intensity>

Expected status code to be 305 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
